# universal_input

./: Cargo.toml
.cargo/: config.toml
scripts/: install.sh
src/: input_emulator.rs  key_codes.rs  lib.rs  spec_enigo.rs  spec_hidg.rs  spec_mki.rs  spec_tfc.rs  stubs.rs  utils.rs
