[package]
name = "universal_input"
version = "0.2.0"
edition = "2021"

[features]
enigo-always = ["dep:enigo"]

[dependencies]
color-eyre = "0.6"
trait-set = "0.3"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"
[target.'cfg(target_os = "linux")'.dependencies]
enigo = { version = "0.2", features = ["wayland"], optional = true }
mouse-keyboard-input = { git = "https://github.com/positiveway/mouse-keyboard-input", branch = "main" }
#mouse-keyboard-input = { path = "/home/user/RustroverProjects/mouse-keyboard-input" }
