[package]
name = "universal_input"
version = "0.2.1"
edition = "2024"

[features]
use_mki = []
mki_separate = []
use_hidg = ["dep:hidg"]
use_enigo = ["dep:enigo"]
use_tfc = ["dep:tfc"]

[dependencies]
color-eyre = "0.6"
trait-set = "0.3"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tfc = { version = "0.7", features = [], optional = true }
#tfc = { version = "0.7", features = ["x11"], optional = true }
hidg = { version = "0.2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
enigo = { version = "0.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
enigo = { version = "0.3", features = ["wayland"], optional = true }

mouse-keyboard-input = { git = "https://github.com/positiveway/mouse-keyboard-input", branch = "main"}
#mouse-keyboard-input = { path = "/mnt/data/Dev/Projects/RustroverProjects/mouse-keyboard-input" }
